# domain/proto/user/userconnect/user.connect.go
@@ -44,6 +44,10 @@ const (
 	UserServiceCreateRoleProcedure = "/proto.UserService/CreateRole"
 	// UserServiceGetRoleProcedure is the fully-qualified name of the UserService's GetRole RPC.
 	UserServiceGetRoleProcedure = "/proto.UserService/GetRole"
+	// UserServiceVerifyOtpProcedure is the fully-qualified name of the UserService's VerifyOtp RPC.
+	UserServiceVerifyOtpProcedure = "/proto.UserService/VerifyOtp"
+	// UserServiceResendOtpProcedure is the fully-qualified name of the UserService's ResendOtp RPC.
+	UserServiceResendOtpProcedure = "/proto.UserService/ResendOtp"
 )
 
 // These variables are the protoreflect.Descriptor objects for the RPCs defined in this package.
@@ -54,6 +58,8 @@ var (
 	userServiceRegisterMethodDescriptor   = userServiceServiceDescriptor.Methods().ByName("Register")
 	userServiceCreateRoleMethodDescriptor = userServiceServiceDescriptor.Methods().ByName("CreateRole")
 	userServiceGetRoleMethodDescriptor    = userServiceServiceDescriptor.Methods().ByName("GetRole")
+	userServiceVerifyOtpMethodDescriptor  = userServiceServiceDescriptor.Methods().ByName("VerifyOtp")
+	userServiceResendOtpMethodDescriptor  = userServiceServiceDescriptor.Methods().ByName("ResendOtp")
 )
 
 // UserServiceClient is a client for the proto.UserService service.
@@ -63,6 +69,8 @@ type UserServiceClient interface {
 	Register(context.Context, *connect.Request[user.UserRegisterRequest]) (*connect.Response[user.SuccessResponse], error)
 	CreateRole(context.Context, *connect.Request[user.Role]) (*connect.Response[user.SuccessResponse], error)
 	GetRole(context.Context, *connect.Request[emptypb.Empty]) (*connect.Response[user.SuccessResponse], error)
+	VerifyOtp(context.Context, *connect.Request[user.VerifyOTPRequest]) (*connect.Response[user.SuccessResponse], error)
+	ResendOtp(context.Context, *connect.Request[user.VerifyOTPRequest]) (*connect.Response[user.SuccessResponse], error)
 }
 
 // NewUserServiceClient constructs a client for the proto.UserService service. By default, it uses
@@ -105,6 +113,18 @@ func NewUserServiceClient(httpClient connect.HTTPClient, baseURL string, opts ..
 			connect.WithSchema(userServiceGetRoleMethodDescriptor),
 			connect.WithClientOptions(opts...),
 		),
+		verifyOtp: connect.NewClient[user.VerifyOTPRequest, user.SuccessResponse](
+			httpClient,
+			baseURL+UserServiceVerifyOtpProcedure,
+			connect.WithSchema(userServiceVerifyOtpMethodDescriptor),
+			connect.WithClientOptions(opts...),
+		),
+		resendOtp: connect.NewClient[user.VerifyOTPRequest, user.SuccessResponse](
+			httpClient,
+			baseURL+UserServiceResendOtpProcedure,
+			connect.WithSchema(userServiceResendOtpMethodDescriptor),
+			connect.WithClientOptions(opts...),
+		),
 	}
 }
 
@@ -115,6 +135,8 @@ type userServiceClient struct {
 	register   *connect.Client[user.UserRegisterRequest, user.SuccessResponse]
 	createRole *connect.Client[user.Role, user.SuccessResponse]
 	getRole    *connect.Client[emptypb.Empty, user.SuccessResponse]
+	verifyOtp  *connect.Client[user.VerifyOTPRequest, user.SuccessResponse]
+	resendOtp  *connect.Client[user.VerifyOTPRequest, user.SuccessResponse]
 }
 
 // GetUsers calls proto.UserService.GetUsers.
@@ -142,6 +164,16 @@ func (c *userServiceClient) GetRole(ctx context.Context, req *connect.Request[em
 	return c.getRole.CallUnary(ctx, req)
 }
 
+// VerifyOtp calls proto.UserService.VerifyOtp.
+func (c *userServiceClient) VerifyOtp(ctx context.Context, req *connect.Request[user.VerifyOTPRequest]) (*connect.Response[user.SuccessResponse], error) {
+	return c.verifyOtp.CallUnary(ctx, req)
+}
+
+// ResendOtp calls proto.UserService.ResendOtp.
+func (c *userServiceClient) ResendOtp(ctx context.Context, req *connect.Request[user.VerifyOTPRequest]) (*connect.Response[user.SuccessResponse], error) {
+	return c.resendOtp.CallUnary(ctx, req)
+}
+
 // UserServiceHandler is an implementation of the proto.UserService service.
 type UserServiceHandler interface {
 	GetUsers(context.Context, *connect.Request[user.GetUsersRequest]) (*connect.Response[user.GetUsersResponse], error)
@@ -149,6 +181,8 @@ type UserServiceHandler interface {
 	Register(context.Context, *connect.Request[user.UserRegisterRequest]) (*connect.Response[user.SuccessResponse], error)
 	CreateRole(context.Context, *connect.Request[user.Role]) (*connect.Response[user.SuccessResponse], error)
 	GetRole(context.Context, *connect.Request[emptypb.Empty]) (*connect.Response[user.SuccessResponse], error)
+	VerifyOtp(context.Context, *connect.Request[user.VerifyOTPRequest]) (*connect.Response[user.SuccessResponse], error)
+	ResendOtp(context.Context, *connect.Request[user.VerifyOTPRequest]) (*connect.Response[user.SuccessResponse], error)
 }
 
 // NewUserServiceHandler builds an HTTP handler from the service implementation. It returns the path
@@ -187,6 +221,18 @@ func NewUserServiceHandler(svc UserServiceHandler, opts ...connect.HandlerOption
 		connect.WithSchema(userServiceGetRoleMethodDescriptor),
 		connect.WithHandlerOptions(opts...),
 	)
+	userServiceVerifyOtpHandler := connect.NewUnaryHandler(
+		UserServiceVerifyOtpProcedure,
+		svc.VerifyOtp,
+		connect.WithSchema(userServiceVerifyOtpMethodDescriptor),
+		connect.WithHandlerOptions(opts...),
+	)
+	userServiceResendOtpHandler := connect.NewUnaryHandler(
+		UserServiceResendOtpProcedure,
+		svc.ResendOtp,
+		connect.WithSchema(userServiceResendOtpMethodDescriptor),
+		connect.WithHandlerOptions(opts...),
+	)
 	return "/proto.UserService/", http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
 		switch r.URL.Path {
 		case UserServiceGetUsersProcedure:
@@ -199,6 +245,10 @@ func NewUserServiceHandler(svc UserServiceHandler, opts ...connect.HandlerOption
 			userServiceCreateRoleHandler.ServeHTTP(w, r)
 		case UserServiceGetRoleProcedure:
 			userServiceGetRoleHandler.ServeHTTP(w, r)
+		case UserServiceVerifyOtpProcedure:
+			userServiceVerifyOtpHandler.ServeHTTP(w, r)
+		case UserServiceResendOtpProcedure:
+			userServiceResendOtpHandler.ServeHTTP(w, r)
 		default:
 			http.NotFound(w, r)
 		}
@@ -226,4 +276,12 @@ func (UnimplementedUserServiceHandler) CreateRole(context.Context, *connect.Requ
 
 func (UnimplementedUserServiceHandler) GetRole(context.Context, *connect.Request[emptypb.Empty]) (*connect.Response[user.SuccessResponse], error) {
 	return nil, connect.NewError(connect.CodeUnimplemented, errors.New("proto.UserService.GetRole is not implemented"))
+}
+
+func (UnimplementedUserServiceHandler) VerifyOtp(context.Context, *connect.Request[user.VerifyOTPRequest]) (*connect.Response[user.SuccessResponse], error) {
+	return nil, connect.NewError(connect.CodeUnimplemented, errors.New("proto.UserService.VerifyOtp is not implemented"))
+}
+
+func (UnimplementedUserServiceHandler) ResendOtp(context.Context, *connect.Request[user.VerifyOTPRequest]) (*connect.Response[user.SuccessResponse], error) {
+	return nil, connect.NewError(connect.CodeUnimplemented, errors.New("proto.UserService.ResendOtp is not implemented"))
 }
